# dual-sensei

./: .gitignore  CLAUDE.md  CLAUDE_TEMPLATE.md  CMakeLists.txt  Makefile  README.md  partitions.csv  pio_patches.py  platformio.ini  sdkconfig.defaults
docs/: parts-list.md  wiring.md
docs/CLAUDE.md/: future-improvements.md  multi-console-roadmap.md  testing-checklist.md  version-history.md
docs/CLAUDE.md/plans/1742396400-settings-menu-rewrite/: audit.md  implementation.md  plan.md
docs/CLAUDE.md/plans/1742432400-epoch2-bluepad32-integration/: implementation.md  plan.md
docs/CLAUDE.md/plans/1773881278-scaffolding-display-input/: audit.md  implementation.md  plan.md
docs/CLAUDE.md/plans/1773979783-ps2-scope-expansion/: audit.md  implementation.md  plan.md
docs/CLAUDE.md/plans/1773986694-multi-controller-support/: audit.md  implementation.md  plan.md
docs/CLAUDE.md/plans/1774034682-psx-spi-slave/: plan.md
main/: CMakeLists.txt  bt.cpp  bt.h  config.h  display.cpp  display.h  input.cpp  input.h  main.cpp  menu.cpp  menu.h  psx.cpp  psx.h  psx_spi.cpp  psx_spi.h
src/: config.h  display.cpp  display.h  input.cpp  input.h  main.cpp  menu.cpp  menu.h
